--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "php": "~7.2",
+        "php": ">=7.2",
         "marc-mabe/php-enum": "^4.4"
     },
     "require-dev": {
